# Aerofoil

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGMENTS.txt  Aerofoil.sln  AerofoilPortable.props  AerofoilWin.props  CMakeLists.txt  Common.props  ConvertResources.bat  Debug.props  DefaultTimestamp.timestamp  FreeTypeImport.props  FreeTypePublic.props  GlidePort.sln  GpCommon.props  GpMainApp.props  LICENSE-MIT.txt  LICENSE.txt  LINUX.txt  MacRomanConversion.props  MakeRelease.bat  PORTING.txt  PackageReleaseArchives.bat  PortabilityLayer.props  README.md  README.txt  RapidJSON.props  Release.props  WindowsUnicodeToolShim.props  bulkimport.py  notes.txt  stb.props  zlib.props
ASADTool/: ASADTool.cpp  ASADTool.vcxproj  ASADTool.vcxproj.filters
Aerofoil/: Aerofoil.filters  Aerofoil.vcxproj  Aerofoil.vcxproj.filters  GpAppEnvironment.cpp  GpAppEnvironment.h  GpAudioDriverFactory.cpp  GpBWCursor_Win32.cpp  GpBWCursor_Win32.h  GpColorCursor_Win32.cpp  GpColorCursor_Win32.h  GpFiberStarter.h  GpFiberStarter_Win32.cpp  GpFiber_Win32.cpp  GpFiber_Win32.h  GpFileStream_Win32.cpp  GpFileStream_Win32.h  GpFileSystem_Win32.cpp  GpFileSystem_Win32.h  GpFontHandlerFactory.cpp  GpFontHandler_FreeType2.cpp  GpGlobalConfig.h  GpLogDriver_Win32.cpp  GpLogDriver_Win32.h  GpMain.cpp  GpMain.h  GpMain_Win32.cpp  GpMemoryBuffer.cpp  GpMutex_Win32.cpp  GpMutex_Win32.h  GpPLGlueAudioChannel.h  GpPLGlueAudioDriver.cpp  GpPLGlueAudioDriver.h  GpPLGlueDisplayDriver.cpp  GpShell.props  GpSystemServices_Win32.cpp  GpSystemServices_Win32.h  GpThreadEvent_Win32.cpp  GpThreadEvent_Win32.h  resource.h
AerofoilAndroid/: .gitignore  GPSPrivacyPolicy.txt  HowToBuild.txt  copy_packaged_resources.bat  copy_source_package.bat  make_symlinks.bat  remove_symlinks.bat  settings.gradle.kts
AerofoilAndroid/app/jni/: .gitignore  AerofoilPortable  CMakeLists.txt  softlink.sh
AerofoilAndroid/app/jni/main/: Android.mk  CMakeLists.txt  GpAndroid.h  GpFileSystem_Android.cpp  GpFileSystem_Android.h  GpMain_SDL_Android.cpp  GpSystemServices_Android.cpp  GpSystemServices_Android.h
AerofoilPortable/: Android.mk  CMakeLists.txt  GpAllocator_C.cpp  GpAllocator_C.h  GpFiberStarter_Thread.cpp  GpFiber_Thread.cpp  GpFiber_Thread.h  GpSystemServices_POSIX.cpp  GpSystemServices_POSIX.h  GpThreadEvent_Cpp11.cpp
AerofoilSDL/: AerofoilSDL.props  AerofoilSDL.vcxproj  AerofoilSDL.vcxproj.filters  AerofoilSDL_Combined.cpp  Android.mk  CMakeLists.txt  GpAudioDriver_SDL2.cpp  GpDisplayDriver_SDL_GL2.cpp  GpFiberStarter_SDL.cpp  GpFiber_SDL.cpp  GpFiber_SDL.h  GpInputDriver_SDL_Gamepad.cpp  GpInputDriver_SDL_Gamepad.h  GpMain_SDL_Win32.cpp  GpMutex_Cpp11.h  GpSDL.h  GpThreadEvent_Cpp11.cpp  GpThreadEvent_Cpp11.h
AerofoilSDL/ShaderCode/: CopyQuadP.cpp  DrawQuad32P.cpp  DrawQuadPaletteP.cpp  DrawQuadPixelConstants.h  DrawQuadV.cpp  Functions.h  ScaleQuadP.cpp
AerofoilWeb/: .gitignore  AerofoilWeb_Combined.cpp  AerofoilWeb_Resources.cpp  BuildAerofoilPortable.bat  BuildAerofoilSDL.bat  BuildAerofoilWeb.bat  BuildGpApp.bat  BuildGpShell.bat  BuildMacRomanConversion.bat  BuildPortabilityLayer.bat  BuildResources.bat  GpFileSystem_Web.cpp  GpFileSystem_Web.h  GpFileSystem_Web_Resources.h  GpLogDriver_Web.cpp  GpLogDriver_Web.h  GpMain_SDL_Web.cpp  GpSystemServices_Web.cpp  GpSystemServices_Web.h  Link.bat  LinkLog.txt  MakeBuildDirs.bat  Rebuild.bat  Run.bat  aerofoil.wat  make-web.sh  run.sh  shell_minimal.html
AerofoilX/: GpFileSystem_X.cpp  GpFileSystem_X.h  GpLogDriver_X.cpp  GpLogDriver_X.h  GpMain_SDL_X.cpp  GpSystemServices_X.cpp  GpSystemServices_X.h
ApplicationResourcePatches/: manifest.json
Common/: CoreDefs.h
CompileShadersD3D11/: CompileShadersD3D11.cpp  CompileShadersD3D11.vcxproj  CompileShadersD3D11.vcxproj.filters
ConvertColorCursors/: ConvertColorCursors.cpp  ConvertColorCursors.vcxproj  ConvertColorCursors.vcxproj.filters
Documentation/: leveleditor.txt  picterrors.txt  readme.txt  userhouses.txt
EmitWiXVersion/: EmitWiXVersion.cpp  EmitWiXVersion.vcxproj  EmitWiXVersion.vcxproj.filters
FTagData/: FTagData.cpp  FTagData.vcxproj  FTagData.vcxproj.filters
FreeType/: Android.mk  FreeType.vcxproj  FreeType.vcxproj.filters  (+1 more)
GpApp/: About.cpp  About.h  Android.mk  AnimCursor.cpp  AppleEvents.cpp  Banner.cpp  CMakeLists.txt  ColorUtils.cpp  Coordinates.cpp  DialogUtils.cpp  DialogUtils.h  DynamicMaps.cpp  Dynamics.cpp  Dynamics3.cpp  Environ.cpp  Environ.h  Events.cpp  Externs.h  FileError.cpp  GameOver.cpp  GameOver.h  GliderDefines.h  GliderProtos.h  GliderStructs.h  GliderVars.h  GpApp.props  GpApp.vcxproj  GpApp.vcxproj.filters  GpAppInterface.cpp  GpApp_Combined.cpp  Grease.cpp  HighScores.cpp  House.cpp  House.h  HouseIO.cpp  HouseInfo.cpp  HouseLegal.cpp  Input.cpp  Interactions.cpp  InterfaceInit.cpp  (+61 more)
GpApp/x64/Debug/: vc141.idb
GpShell/: Android.mk  CMakeLists.txt  GpAppEnvironment.cpp  GpAppEnvironment.h  GpAudioDriverFactory.cpp  GpAudioDriverFactory.h  GpDisplayDriverFactory.cpp  GpDisplayDriverFactory.h  GpFiberStarter.h  GpFontHandlerFactory.cpp  GpFontHandlerFactory.h  GpGlobalConfig.cpp  GpGlobalConfig.h  GpInputDriverFactory.cpp  GpInputDriverFactory.h  GpMain.cpp  GpMain.h  GpShell.vcxproj  GpShell.vcxproj.filters  GpShell_Combined.cpp  GpVOSEventQueue.h
PortabilityLayer/: AEHandlerDesc.h  AEManager.cpp  AEManager.h  Android.mk  AntiAliasTable.cpp  AntiAliasTable.h  AppEventHandler.cpp  AppEventHandler.h  ArrayTools.h  BMPFormat.h  BinHex4.cpp  BinHex4.h  BinarySearch.h  BitmapImage.cpp  BitmapImage.h  BytePack.h  ByteSwap.cpp  ByteSwap.h  ByteUnpack.h  CFileStream.cpp  CFileStream.h  CMakeLists.txt  ClientAudioChannelContext.h  CombinedTimestamp.h  CompositeRenderedFont.cpp  CompositeRenderedFont.h  DataTypes.h  DeflateCodec.cpp  DeflateCodec.h  DialogManager.cpp  DialogManager.h  DisplayDeviceManager.cpp  DisplayDeviceManager.h  EllipsePlotter.cpp  EllipsePlotter.h  FileBrowserUI.cpp  FileBrowserUI.h  FileManager.cpp  FileManager.h  FilePermission.h  (+247 more)
PortabilityLayer/x64/Debug/: PortabilityLayer.idb
SDL2-2.32.6/: CMakeLists.SDL.txt  CMakeLists.txt
(+417 files in other folders)
