cmake_minimum_required(VERSION 3.18)

project(AEROFOIL)

add_subdirectory(AerofoilPortable)
add_subdirectory(AerofoilSDL)
add_subdirectory(GpApp)
add_subdirectory(GpShell)
add_subdirectory(MacRomanConversion)
add_subdirectory(PortabilityLayer)
add_subdirectory(rapidjson)
add_subdirectory(stb)
add_subdirectory(main)
add_subdirectory(SDL2)
